# Play-

./: CMakeLists.txt
.github/workflows/: Play.xcodeproj  Play.xcodeproj.yml  build-ios.yaml  build-ios.yml
.github/workflows/.github/workflows/: ios-step1-cmake.yml
Source/: CMakeLists.txt  Info.plist.in  MIPSAssembler.cpp
Source/ui_ios/: AppDelegate.mm  CMakeLists.txt  Info.plist  Info.plist.in  Play.entitlements
Source/ui_ios/Entitlements/: DebugMemory.entitlements  Play.entitlements
Source/ui_ios/JIT/: DualMapping.h  DualMapping.mm  JITManager.h  JITManager.mm  JitConfig.h  JitManager.h  JitManager.mm  JitMemory.cpp  JitMemory.h
Source/ui_ios/Resources/: Play.entitlement
Source/ui_ios/Scripts/: enable_jit.sh  setup_pairing.sh
installer_ios/: MyApp.entitlements.txt  Play!entitlement
